fixing font-icons & nav-menu alignments

--- a/src/css/scss/_responsive/_responsive-footer.scss
+++ b/src/css/scss/_responsive/_responsive-footer.scss
@@ -590,10 +590,6 @@ form.footer-store-locator-form{
   border:none;
   margin-top:0;
 }
-.footer-signature .sprite-reg-nav-sony-logo {
-  position: relative;
-  margin:0 0 9px 0;
-}
 .footer-signature{
   text-align:center;
 }
